Opens java.lang as it's required for Java 24+
There are more advanced approaches in the works and we might just revert
this commit later in time but I would like to have something that we can
relatively easily backport as supporting Java 25 for our LTS could be
nice if it doesn't require crazy changes.

(cherry picked from commit c3adac22958de6e8cc417d00a57ffca427cc4e1f)